--- a/ARIMA/ARIMA.ipynb
+++ b/ARIMA/ARIMA.ipynb
@@ -2,15 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\nOriginal base project found at https://www.kaggle.com/code/nageshsingh/stock-market-forecasting-arima\\n'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Library Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from datetime import datetime\n",
     "import yfinance as yf \n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "from numpy import log \n",
@@ -20,7 +30,10 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "%matplotlib inline\n",
-    "plt.style.use('fivethirtyeight')"
+    "plt.style.use('fivethirtyeight')\n",
+    "''' \n",
+    "Original base project found at https://www.kaggle.com/code/nageshsingh/stock-market-forecasting-arima\n",
+    "'''"
    ]
   },
   {
@@ -142,7 +155,6 @@
    ],
    "source": [
     "### Import the Stock Info\n",
-    "\n",
     "ticker = 'GOOG'\n",
     "start_date = '2018-1-1'\n",
     "\n",
